<resources>
    <string name="app_name" translatable="false">Cinepolis App</string>
    <string name="profile">Profile</string>
    <string name="movies">Movies</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_text">Continue</string>
    <string name="loading">Loading…</string>
    <string name="error">Error</string>
    <string name="accept">Accept</string>
    <string name="required_field">Required field.</string>
    <string name="invalid_email_error">Invalid email address.</string>
    <string name="password_length_error">Password too short.</string>
    <string name="personal">Personal Data</string>
    <string name="name">Name</string>
    <string name="card">Card</string>
    <string name="no_profile_found_error">The profile cannot be found. Please log in again.</string>
    <string name="last_name">Last Name</string>
    <string name="share">Share</string>
    <string name="synopsis">Synopsis</string>
    <string name="duration">Duration</string>
    <string name="genre">Genre</string>
    <string name="classification">Classification</string>
    <string name="images">Images</string>
    <string name="full_name">Full Name</string>
    <string name="no_loyalty_data_found">No data to display can be found.</string>
    <string name="card_number">Card Number</string>
    <string name="check_transactions">Check Transactions</string>
    <string name="cancel">Cancel</string>
    <string name="check">Check</string>
    <string name="country_code">Country Code</string>
    <string name="just_two_characters_error">Only two characters are allowed.</string>
    <string name="pin">Pin</string>
    <string name="no_available">No Available</string>
    <string name="offline_mode">Offline Mode</string>
</resources>