<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.detail.MovieDetailFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?android:colorBackground"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false"
                app:toolbarId="@+id/toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--<com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/image_view"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/RoundBottomImageView.Overlay"
                        tools:src="@tools:sample/backgrounds/scenic" />-->

                    <com.google.android.exoplayer2.ui.StyledPlayerView
                        android:id="@+id/player_view"
                        android:layout_width="0dp"
                        android:layout_height="250dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:resize_mode="fixed_width"
                        app:show_buffering="when_playing" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    style="@style/Toolbar.BackAction"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/menu_movie_detail"
                    app:navigationIconTint="?attr/colorOnPrimary"
                    app:titleCentered="true" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dim_padding"
            app:layout_constraintTop_toBottomOf="@id/bar_layout">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dim_margin_medium"
                android:ellipsize="end"
                android:maxLines="3"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/lorem/random" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/dim_margin_medium"
                android:layout_marginTop="@dimen/dim_margin"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_view">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/duration_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dim_padding_very_small"
                        android:textAppearance="?attr/textAppearanceBody1"
                        tools:text="150 min" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textAppearance="?attr/textAppearanceCaption" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/dim_bar_divider_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dim_margin_small"
                    android:layout_marginEnd="@dimen/dim_margin_small"
                    android:background="?attr/colorControlNormal" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/genre_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dim_padding_very_small"
                        android:textAppearance="?attr/textAppearanceBody1"
                        tools:text="Thriller" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textAppearance="?attr/textAppearanceCaption" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/dim_bar_divider_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dim_margin_small"
                    android:layout_marginEnd="@dimen/dim_margin_small"
                    android:background="?attr/colorControlNormal" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/classification_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dim_padding_very_small"
                        android:textAppearance="?attr/textAppearanceBody1"
                        tools:text="S/C" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/classification"
                        android:textAppearance="?attr/textAppearanceCaption" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/synopsis_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dim_margin_medium"
                android:layout_marginTop="@dimen/dim_margin"
                android:text="@string/synopsis"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/info_layout" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/synopsis_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dim_margin_medium"
                android:layout_marginTop="@dimen/dim_margin_small"
                android:text="@string/synopsis"
                app:layout_constraintTop_toBottomOf="@id/synopsis_label"
                tools:maxLines="5"
                tools:text="@tools:sample/lorem/random" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/images_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dim_margin_medium"
                android:layout_marginTop="@dimen/dim_margin"
                android:text="@string/images"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/synopsis_view" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/dim_margin_small"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@id/images_label">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/poster_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dim_margin_medium"
                        android:layout_marginEnd="@dimen/dim_margin_very_small"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/RoundedImageView.Overlay"
                        tools:src="@tools:sample/backgrounds/scenic" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/poster_horizontal_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dim_margin_very_small"
                        android:layout_marginEnd="@dimen/dim_margin_very_small"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/RoundedImageView.Overlay"
                        tools:src="@tools:sample/backgrounds/scenic" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/background_synopsis_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dim_margin_very_small"
                        android:layout_marginEnd="@dimen/dim_margin_medium"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/RoundedImageView.Overlay"
                        tools:src="@tools:sample/backgrounds/scenic" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>